Changed to caret version (^) to update to the next minor version

--- a/node.js/package.json
+++ b/node.js/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@opencensus/exporter-zipkin": "0.0.19",
-    "@opencensus/nodejs": "0.0.19"
+    "@opencensus/exporter-zipkin": "^0.0.19",
+    "@opencensus/nodejs": "^0.0.19"
   }
 }
